Added contact and more responsiveness

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a href="#skills">-Skills</a>
             <a href="#projects">-Projects</a>
             <a href="#">-Contact</a>
+            <box-icon class="burger" name='menu' color='#ffffff'></box-icon>
         </nav>
     </header>
 
@@ -52,7 +53,7 @@
                     <a href="#"><box-icon name='facebook-square' size="lg" type='logo'
                             animation='tada-hover'></box-icon></a>
                     <a href="#"><box-icon name='instagram' type='logo' size="lg" animation='tada-hover'></box-icon></a>
-                    <a href="#"><box-icon name='github' type='logo' size="lg" animation='tada-hover'></box-icon></a>
+                    <a href="https://github.com/k4rldoherty"><box-icon name='github' type='logo' size="lg" animation='tada-hover'></box-icon></a>
                     <a href="https://www.linkedin.com/in/karl-doherty-084b37225/"><box-icon name='linkedin-square'
                             size="lg" type='logo' animation='tada-hover'></box-icon></a>
                 </div>
@@ -115,23 +116,59 @@
 
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span><h3>Full Stack Development</h3></span><br><p>Designing and iplementing full stack projects</p>
+                            <li><span>
+                                    <h3>Full Stack Development</h3>
+                                </span><br>
+                                <p>Designing and iplementing full stack projects</p>
                             </li>
-                            <li><span><h3>UI/UX</h3></span><br><p>Designing Webb/App interfaces</p></li>
-                            <li><span><h3>Database Design</h3></span><br><p>Database Structuring for small and large projects</p></li>
+                            <li><span>
+                                    <h3>UI/UX</h3>
+                                </span><br>
+                                <p>Designing Webb/App interfaces</p>
+                            </li>
+                            <li><span>
+                                    <h3>Database Design</h3>
+                                </span><br>
+                                <p>Database Structuring for small and large projects</p>
+                            </li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span><h3>2022 - 2022 (Internship)</h3></span><br><p>Software Engineer</p></li>
-                            <li><span><h3>2021 - 2023</h3></span><br><p>O'Reillys Sports - Store Operations Manager</p></li>
-                            <li><span><h3>2016 - 2021</h3></span><br><p>Kees Hotel - Lifegaurd</p></li>
+                            <li><span>
+                                    <h3>2022 - 2022 (Internship)</h3>
+                                </span><br>
+                                <p>Software Engineer</p>
+                            </li>
+                            <li><span>
+                                    <h3>2021 - 2023</h3>
+                                </span><br>
+                                <p>O'Reillys Sports - Store Operations Manager</p>
+                            </li>
+                            <li><span>
+                                    <h3>2016 - 2021</h3>
+                                </span><br>
+                                <p>Kees Hotel - Lifegaurd</p>
+                            </li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span><h3>BSc In Computer Science</h3></span><br><p>Dublin City University</p></li>
-                            <li><span><h3>Leaving Certificate (Ireland)</h3></span><br><p>St Columbas College Stranorlar</p></li>
+                            <li><span>
+                                    <h3>BSc In Computer Science</h3>
+                                </span><br>
+                                <p>Dublin City University</p>
+                            </li>
+                            <li><span>
+                                    <h3>Leaving Certificate (Ireland)</h3>
+                                </span><br>
+                                <p>St Columbas College Stranorlar</p>
+                            </li>
+                            <li><span>
+                                    <h3>Primary School</h3>
+                                </span><br>
+                                <p>St Marys N.S Stranorlar</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -141,6 +178,8 @@
 
     <section id="skills">
         <div class="skills">
+            <h1 class="subtitle">My<span> Skills</span></h1>
+
             <div class="technical-skills">
                 <h2>
                     Technical Skills
@@ -194,7 +233,7 @@
                             <h3>ArtistConnect</h3>
                             <p>A music themed social media application allowing music fans and artists to communicate,
                                 collaborate and interact.</p>
-                            <a href=""><box-icon name='link-external' ></box-icon></a>
+                            <a href=""><box-icon name='link-external'></box-icon></a>
                         </div>
                     </div>
                     <div class="project">
@@ -202,30 +241,55 @@
                         <div class="layer">
                             <h3>Share With Friends</h3>
                             <p>Gather more traction for your gigs by posting on our platform</p>
-                            <a href=""><box-icon name='link-external' ></box-icon></a>
+                            <a href=""><box-icon name='link-external'></box-icon></a>
                         </div>
                     </div>
                     <div class="project">
                         <img src="images/ArtistConnect3.png" alt="">
                         <div class="layer">
                             <h3>Find new songs based on songs you like</h3>
-                            <p>With a built in song reccomender, you can discover songs that may not have previously been
+                            <p>With a built in song reccomender, you can discover songs that may not have previously
+                                been
                                 known to you that fit your style</p>
-                            <a href=""><box-icon name='link-external' ></box-icon></a>
+                            <a href=""><box-icon name='link-external'></box-icon></a>
                         </div>
                     </div>
                 </div>
-                <a href="" class="button">See More</a>
+                <a href="https://github.com/k4rldoherty" class="button">See More</a>
             </div>
         </div>
     </section>
 
     <section id="contact">
-        
+        <div class="contact-container">
+            <h1 class="subtitle">Contact <span>Me</span></h1>
+            <div class="contact">
+                <div class="row">
+                    <div class="col-2">
+                        <form action="submit">
+                            <input type="text" placeholder="e-mail">
+                            <input type="text" placeholder="name">
+                            <textarea name="message" rows="12" placeholder="Your Message"></textarea>
+                            <button type="submit" class="button"><p>Send Message</p></button>
+                        </form>
+                    </div>
+                    <div class="col-1">
+                        <box-icon name='envelope' type='solid' color='#000000' size="lg" animation='tada-hover'></box-icon>
+                        <a href="#"><box-icon name='facebook-square' size="lg" type='logo'
+                                animation='tada-hover'></box-icon></a>
+                        <a href="#"><box-icon name='instagram' type='logo' size="lg" animation='tada-hover'></box-icon></a>
+                        <a href="https://github.com/k4rldoherty"><box-icon name='github' type='logo' size="lg" animation='tada-hover'></box-icon></a>
+                        <a href="https://www.linkedin.com/in/karl-doherty-084b37225/"><box-icon name='linkedin-square'
+                                size="lg" type='logo' animation='tada-hover'></box-icon></a>
+                        <a href="./Karl Doherty Resume.pdf" download class="button">Download CV</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
-        <p>By Karl Doherty, 2023</p>
+        <p><box-icon name='heart' type='solid' animation='tada' flip='horizontal' color='#dc493a' ></box-icon>  By Karl Doherty, 2023  <box-icon name='heart' type='solid' animation='tada' flip='horizontal' color='#dc493a' ></box-icon></p>
     </footer>
 
     <script>
