Happy with responsiveness for now, nav menu functional on small screens

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
             <a href="#skills">-Skills</a>
             <a href="#projects">-Projects</a>
             <a href="#">-Contact</a>
-            <box-icon class="burger" name='menu' color='#ffffff'></box-icon>
+        </nav>
+        <box-icon class="burger" onclick="openNav()" name='menu' color='#ffffff'></box-icon>
+        <nav class="navbar-mobile" id="navbar-mobile">
+            <a href="#about" onclick="openNav()">-About Me</a>
+            <a href="#skills"onclick="openNav()">-Skills</a>
+            <a href="#projects"onclick="openNav()">-Projects</a>
+            <a href="#contact"onclick="openNav()">-Contact</a>
         </nav>
     </header>
 
@@ -53,7 +59,8 @@
                     <a href="#"><box-icon name='facebook-square' size="lg" type='logo'
                             animation='tada-hover'></box-icon></a>
                     <a href="#"><box-icon name='instagram' type='logo' size="lg" animation='tada-hover'></box-icon></a>
-                    <a href="https://github.com/k4rldoherty"><box-icon name='github' type='logo' size="lg" animation='tada-hover'></box-icon></a>
+                    <a href="https://github.com/k4rldoherty"><box-icon name='github' type='logo' size="lg"
+                            animation='tada-hover'></box-icon></a>
                     <a href="https://www.linkedin.com/in/karl-doherty-084b37225/"><box-icon name='linkedin-square'
                             size="lg" type='logo' animation='tada-hover'></box-icon></a>
                 </div>
@@ -267,18 +274,23 @@
                 <div class="row">
                     <div class="col-2">
                         <form action="submit">
-                            <input type="text" placeholder="e-mail">
-                            <input type="text" placeholder="name">
-                            <textarea name="message" rows="12" placeholder="Your Message"></textarea>
-                            <button type="submit" class="button"><p>Send Message</p></button>
+                            <input id="email-input" type="text" placeholder="e-mail">
+                            <input id="name-input" type="text" placeholder="name">
+                            <textarea id="message-input" name="message" rows="12" placeholder="Your Message"></textarea>
+                            <button onclick="emptyInputBoxes()" type="submit" class="button" disabled="true">
+                                <p>Work In Progress - Stay Tuned</p>
+                            </button>
                         </form>
                     </div>
                     <div class="col-1">
-                        <box-icon name='envelope' type='solid' color='#000000' size="lg" animation='tada-hover'></box-icon>
+                        <box-icon name='envelope' type='solid' color='#000000' size="lg"
+                            animation='tada-hover'></box-icon>
                         <a href="#"><box-icon name='facebook-square' size="lg" type='logo'
                                 animation='tada-hover'></box-icon></a>
-                        <a href="#"><box-icon name='instagram' type='logo' size="lg" animation='tada-hover'></box-icon></a>
-                        <a href="https://github.com/k4rldoherty"><box-icon name='github' type='logo' size="lg" animation='tada-hover'></box-icon></a>
+                        <a href="#"><box-icon name='instagram' type='logo' size="lg"
+                                animation='tada-hover'></box-icon></a>
+                        <a href="https://github.com/k4rldoherty"><box-icon name='github' type='logo' size="lg"
+                                animation='tada-hover'></box-icon></a>
                         <a href="https://www.linkedin.com/in/karl-doherty-084b37225/"><box-icon name='linkedin-square'
                                 size="lg" type='logo' animation='tada-hover'></box-icon></a>
                         <a href="./Karl Doherty Resume.pdf" download class="button">Download CV</a>
@@ -289,7 +301,9 @@
     </section>
 
     <footer>
-        <p><box-icon name='heart' type='solid' animation='tada' flip='horizontal' color='#dc493a' ></box-icon>  By Karl Doherty, 2023  <box-icon name='heart' type='solid' animation='tada' flip='horizontal' color='#dc493a' ></box-icon></p>
+        <p><box-icon name='heart' type='solid' animation='tada' flip='horizontal' color='#dc493a'></box-icon> By Karl
+            Doherty, 2023 <box-icon name='heart' type='solid' animation='tada' flip='horizontal'
+                color='#dc493a'></box-icon></p>
     </footer>
 
     <script>
