--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <li><span>
                                     <h3>2021 - 2023</h3>
                                 </span><br>
-                                <p>O'Reillys Sports - Store Operations Manager</p>
+                                <p>O'Reillys Sports - Website Maintenance / Store Assistant</p>
                             </li>
                             <li><span>
                                     <h3>2016 - 2021</h3>
@@ -296,7 +296,7 @@
                                 animation='tada-hover'></box-icon></a>
                         <a href="https://www.linkedin.com/in/karl-doherty-084b37225/"><box-icon name='linkedin-square'
                                 size="lg" type='logo' animation='tada-hover'></box-icon></a>
-                        <a href="./Karl Doherty Resume.pdf" download class="button">Download CV</a>
+                        <a href="./Karl Doherty Resume (18_10_23).pdf" download class="button">Download CV</a>
                     </div>
                 </div>
             </div>
