--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                 animation='tada-hover'></box-icon></a>
                         <a href="https://www.linkedin.com/in/karl-doherty-084b37225/"><box-icon name='linkedin-square'
                                 size="lg" type='logo' animation='tada-hover'></box-icon></a>
-                        <a href="./Karl Doherty Resume (18_10_23).pdf" download class="button">Download CV</a>
+                        <a href="./Karl Doherty Resume 21_10_23.pdf" download class="button">Download CV</a>
                     </div>
                 </div>
             </div>
