--- a/index.html
+++ b/index.html
@@ -30,31 +30,29 @@
     <header class="header">
         <a class="logo" href="#">- KD -</a>
         <nav class="navbar">
-            <a href="#about">-About Me</a>
-            <a href="#skills">-Skills</a>
-            <a href="#projects">-Projects</a>
-            <a href="#contact">-Contact</a>
+            <a href="#about">About Me</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
         </nav>
         <box-icon class="burger" onclick="openNav()" name='menu' color='#ffffff'></box-icon>
         <nav class="navbar-mobile" id="navbar-mobile">
-            <a href="#about" onclick="openNav()">-About Me</a>
-            <a href="#skills" onclick="openNav()">-Skills</a>
-            <a href="#projects" onclick="openNav()">-Projects</a>
-            <a href="#contact" onclick="openNav()">-Contact</a>
+            <a href="#about" onclick="openNav()">About Me</a>
+            <a href="#skills" onclick="openNav()">Skills</a>
+            <a href="#projects" onclick="openNav()">Projects</a>
+            <a href="#contact" onclick="openNav()">Contact</a>
         </nav>
     </header>
 
     <section class="home">
         <div class="home-content">
             <div class="left">
-                <h3><box-icon name='hand-right' type='solid' animation='tada'></box-icon>Hey, my name is</h3>
                 <h1>Karl Doherty</h1>
                 <div class="typed-container">
                     <h3><span class="typed" id="typed"></span></h3>
                 </div>
-                <p>I am a recently graduated Software Developer from Dublin City University,<br> with 6 months of
-                    industry experience.<br>
-                    I love taking on new challenges and I am always eager to learn new things!</p><br><br>
+                <p>A recently graduated Software Developer from Dublin City University,<br> with 6 months of
+                    industry experience in both front and back end development.<br><br>
                 <div class="socials">
                     <a href="#"><box-icon name='facebook-square' size="lg" type='logo'
                             animation='tada-hover'></box-icon></a>
@@ -80,10 +78,10 @@
         <div class="about">
             <div class="row">
                 <div class="about-col1">
-                    <img src="./images/Optimized-IMG-0510.jpg" alt="">
+                    <img src="./images/IMG_1322.jpg" alt="">
                 </div>
                 <div class="about-col2">
-                    <h1 class="subtitle">About <span>Me</span></h1>
+                    <h2 class="subtitle">About Me</h2>
                     <p>
                         Welcome to my corner of the digital realm! I'm Karl Doherty, a dedicated graduate software
                         developer
@@ -185,7 +183,7 @@
 
     <section id="skills">
         <div class="skills">
-            <h1 class="subtitle">My<span> Skills</span></h1>
+            <h1 class="subtitle">My Skills</h1>
 
             <div class="technical-skills">
                 <h2>
@@ -200,7 +198,7 @@
                         max="100"></progress></div>
                 <div class="skill"><box-icon name='python' size="lg" type='logo'></box-icon>Python<progress value="80"
                         max="100"></progress></div>
-                <div class="skill"><box-icon type='logo' size="lg" name='java'></box-icon>Java<progress value="65"
+                <div class="skill"><box-icon type='logo' size="lg" name='java'></box-icon>Java<progress value="85"
                         max="100"></progress></div>
                 <div class="skill"><box-icon name='dev-to' size="lg" type='logo'></box-icon>Front End
                     Development<progress value="80" max="100"></progress></div>
@@ -214,7 +212,7 @@
                 <div class="skill"><box-icon name='megaphone' size="lg" type='solid'></box-icon>Communication<progress
                         value="90" max="100"></progress></div>
                 <div class="skill"><box-icon name='crown' size="lg" type='solid'></box-icon>Leadership<progress
-                        value="50" max="100"></progress></div>
+                        value="70" max="100"></progress></div>
                 <div class="skill"><box-icon name='group' size="lg" type='solid'></box-icon>Teamwork<progress value="90"
                         max="100"></progress></div>
                 <div class="skill"><box-icon type='solid' size="lg" name='palette'></box-icon>Creativity<progress
@@ -231,7 +229,7 @@
         <div class="portfolio">
             <div class="container">
                 <div class="sub-title">
-                    <h1 class="subtitle">My <span>Work</span></h1>
+                    <h1 class="subtitle">My Work</h1>
                 </div>
                 <div class="work-list">
                     <div class="project">
@@ -264,6 +262,16 @@
                                     name='link-external'></box-icon></a>
                         </div>
                     </div>
+                    <div class="project">
+                        <img src="images/ArtistConnect1.png" alt="">
+                        <div class="layer">
+                            <h3>ArtistConnect</h3>
+                            <p>A music themed social media application allowing music fans and artists to communicate,
+                                collaborate and interact.</p>
+                            <a href="https://github.com/k4rldoherty/ArtistConnect"><box-icon
+                                    name='link-external'></box-icon></a>
+                        </div>
+                    </div>
                 </div>
                 <a href="https://github.com/k4rldoherty" class="button">See More</a>
             </div>
@@ -272,7 +280,7 @@
 
     <section id="contact">
         <div class="contact-container">
-            <h1 class="subtitle">Contact <span>Me</span></h1>
+            <h1 class="subtitle">Contact Me</h1>
             <div class="contact">
                 <div class="row">
                     <div class="col-2">
@@ -280,7 +288,7 @@
                             <input id="email-input" type="text" placeholder="e-mail" name="email">
                             <input id="name-input" type="text" placeholder="name" name="name">
                             <textarea id="message-input" name="message" rows="12" placeholder="Your Message"></textarea>
-                            <button onclick="emptyInputBoxes()" type="submit" class="button" >
+                            <button onclick="emptyInputBoxes()" type="submit" class="button">
                                 <p>Message Me</p>
                             </button>
                         </form>
@@ -296,7 +304,7 @@
                                 animation='tada-hover'></box-icon></a>
                         <a href="https://www.linkedin.com/in/karl-doherty-084b37225/"><box-icon name='linkedin-square'
                                 size="lg" type='logo' animation='tada-hover'></box-icon></a>
-                        <a href="./Karl Doherty Resume 21_10_23.pdf" download class="button">Download CV</a>
+                        <a href="./Karl Doherty Resume 27_10_23 - Copy.pdf" download class="button">Download CV</a>
                     </div>
                 </div>
             </div>
@@ -311,7 +319,7 @@
 
     <script>
         var typed = new Typed('#typed', {
-            strings: ['Full Stack Developer.', 'Tech Enthusiast.', 'Continuous learner.'],
+            strings: ['Full Stack Developer.', 'Tech Enthusiast.', 'Continuous Learner.'],
             typeSpeed: 50,
             backSpeed: 50,
             loop: true
