--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                         Jiu-Jitsu
                         to keep the mind and body fresh from all those hours sitting at the computer! I'm also an animal
                         lover,
-                        and enjoy playing with my dog, Jax.
+                        and enjoy running and walking my dog, Jax.
                         <br><br>
-                        Thank you for taking the time to explore my journey as a software developer.
+                        Thank you for taking the time to explore my journey as a software developer.<br><br/>
                     </p>
 
                     <div class="tab-titles">
@@ -252,23 +252,24 @@
                         </div>
                     </div>
                     <div class="project">
-                        <img src="images/ArtistConnect3.png" alt="">
+                        <img src="images/Scraper.png" alt="">
                         <div class="layer">
-                            <h3>Find new songs based on songs you like</h3>
-                            <p>With a built in song reccomender, you can discover songs that may not have previously
-                                been
-                                known to you that fit your style</p>
-                            <a href="https://github.com/k4rldoherty/ArtistConnect"><box-icon
+                            <h3>Web Scraper News Application</h3>
+                            <p>Engineered an Android app for multi-source web scraping, offering users the
+                                ability to create accounts, select favourite soccer teams, search and filter articles,
+                                and receive real-time updates from prominent news sources.
+                            </p>
+                            <a href="https://github.com/k4rldoherty/PremNews"><box-icon
                                     name='link-external'></box-icon></a>
                         </div>
                     </div>
                     <div class="project">
-                        <img src="images/ArtistConnect1.png" alt="">
+                        <img src="images/StudentTracker.png" alt="">
                         <div class="layer">
-                            <h3>ArtistConnect</h3>
-                            <p>A music themed social media application allowing music fans and artists to communicate,
-                                collaborate and interact.</p>
-                            <a href="https://github.com/k4rldoherty/ArtistConnect"><box-icon
+                            <h3>Student Tracker Full Staok</h3>
+                            <p>A Spring Boot React demo project I completed when practicing my full stack development
+                                skills</p>
+                            <a href="https://github.com/k4rldoherty/SpringBootReact"><box-icon
                                     name='link-external'></box-icon></a>
                         </div>
                     </div>
