Mobile responsiveness testing

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                     <h3><span class="typed" id="typed"></span></h3>
                 </div>
                 <p>A recently graduated Software Developer from Dublin City University,<br> with 6 months of
-                    industry experience in both front and back end development.<br><br>
+                    industry experience in both front and back end development.<br><br></p>
+                <p class="desktop-only">I am passionate about creating efficient and user-friendly software solutions that solve real-world
+                    problems. With a strong foundation in programming languages such as Java, Python, and JavaScript, I
+                    am dedicated to continuous learning and staying up-to-date with the latest industry trends.</p><br><br>
                 <div class="socials">
                     <a href="#"><box-icon name='facebook-square' size="lg" type='logo'
                             animation='tada-hover'></box-icon></a>
@@ -110,7 +113,7 @@
                         lover,
                         and enjoy running and walking my dog, Jax.
                         <br><br>
-                        Thank you for taking the time to explore my journey as a software developer.<br><br/>
+                        Thank you for taking the time to explore my journey as a software developer.<br><br />
                     </p>
 
                     <div class="tab-titles">
