Mobile responsiveness testing

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <div class="project">
                         <img src="images/StudentTracker.png" alt="">
                         <div class="layer">
-                            <h3>Student Tracker Full Staok</h3>
+                            <h3>Student Tracker Full Stack Application</h3>
                             <p>A Spring Boot React demo project I completed when practicing my full stack development
                                 skills</p>
                             <a href="https://github.com/k4rldoherty/SpringBootReact"><box-icon
